loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:5: error: illegal start of simple expression
    if()
       ^Poucet2:6: error: ')' expected but '}' found.
  }
  ^Poucet2:7: error: 'while' expected but '}' found.
} 
^