loopdowhile.Poucet2.scala.code
var nbBiscuits=0

while(!sortieTrouvee()) {
  do(avance()) {
    if()
  }
}